页面适配手机,新增皮肤切换功能

--- a/view/admin/admin/admin_log.html
+++ b/view/admin/admin/admin_log.html
@@ -34,7 +34,7 @@
                     <div>
 
                     </div>
-                    <div>
+                    <div style="overflow: auto;">
                         <table class="layui-table">
                             <colgroup>
                                 <col width="150">
