--- a/view/admin/admin_group/index.html
+++ b/view/admin/admin_group/index.html
@@ -34,7 +34,7 @@
                             <a class="layui-btn" href="{:url('AdminGroup/create')}">添加分组</a>
                         </div>
                     </div>
-                    <div>
+                    <div style="overflow: auto;">
                         <table class="layui-table">
                             <thead>
                                 <tr>
