--- a/view/admin/login/index.html
+++ b/view/admin/login/index.html
@@ -54,7 +54,8 @@
                                     <div class="layui-input-block">
                                         <input type="text" name="captcha" required lay-verify="required"
                                             placeholder="请输入验证码" autocomplete="off" value="test(直接登陆即可)" class="layui-input">
-                                            <img class="captcha" src="/api/Captcha/build" onclick="this.src = '/api/Captcha/build?v='+Math.random()" style="cursor: pointer" alt="">
+                                            <img class="captcha" src="/api/Captcha/build" onclick="this.src = '/api/Captcha/build?v='+Math.random()" style="cursor: pointer;width: 
+                                            100%;" alt="">
                                     </div>
                                     
                                 </div>
