--- a/view/admin/user/index.html
+++ b/view/admin/user/index.html
@@ -34,7 +34,7 @@
                     <div >
                         <a class="layui-btn" href="{:url('create')}"> 添加用户</a>
                     </div>
-                    <div>
+                    <div style="overflow: auto;">
                         <table class="layui-table" lay-skin="line">
                             <thead>
                                 <tr>
