--- a/view/admin/admin/index.html
+++ b/view/admin/admin/index.html
@@ -34,7 +34,7 @@
                     <div>
                         <a class="layui-btn" href="{:url('Admin/create')}">添加管理员</a>
                     </div>
-                    <div>
+                    <div style="overflow: auto;">
                         <table class="layui-table">
                             <thead>
                                 <tr>
