--- a/view/admin/file/index.html
+++ b/view/admin/file/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="main-container">
                     <div>
-                        <form action="" lay-filter="filter" class="layui-form">
+                        <form action="" lay-filter="filter" class="layui-form layui-form-pane ">
                             <input type="hidden" name="type" value="{$Request.param.type|default=1}">
                             <div class="layui-form-item">
                                 <div class="layui-inline">
@@ -43,8 +43,8 @@
                                             <option value="0">未使用(仅供预览)</option>
                                             <option value="1">已使用</option>
                                             <option value="2">已删除</option>
-                                            <option value="3">已清除</option>                                            
-                                        </select>     
+                                            <option value="3">已清除</option>
+                                        </select>
                                     </div>
 
                                 </div>
@@ -55,7 +55,7 @@
 
                         </form>
                     </div>
-                    <div>
+                    <div style="overflow: auto;">
                         <table class="layui-table">
 
                             <thead>
@@ -63,7 +63,7 @@
                                     <th>ID</th>
                                     <th>预览</th>
                                     <th>文件信息</th>
-                                    <th>状态时间</th>
+                                    <th style="min-width: 200px;">状态时间</th>
                                     <th>操作</th>
                                 </tr>
                             </thead>
@@ -103,14 +103,15 @@
                                     <td>
                                         <div class="layui-btn-container">
                                             {if condition="empty($vo->getData('clear_time'))" }
-                                            {if condition="!empty($vo->getData('used_time')) && empty($vo->getData('delete_time'))" }
+                                            {if condition="!empty($vo->getData('used_time')) &&
+                                            empty($vo->getData('delete_time'))" }
                                             <div class="layui-btn layui-btn-sm force-clear">强制清除文件</div>
                                             {else /}
-                                                    <div class="layui-btn layui-btn-sm clear">清除文件</div>
+                                            <div class="layui-btn layui-btn-sm clear">清除文件</div>
                                             {/if}
                                             {/if}
                                             {if condition="empty($vo->getData('clear_time'))" }
-                                                <a class="layui-btn layui-btn-sm" href="{$vo.src}" target="_blank">下载</a>
+                                            <a class="layui-btn layui-btn-sm" href="{$vo.src}" target="_blank">下载</a>
                                             {/if}
 
                                         </div>
@@ -132,42 +133,42 @@
         {include file="common/_footer"}
 
         <script>
-            layui.use(['layer','form'],function(){
+            layui.use(['layer', 'form'], function () {
 
                 var form = layui.form;
 
-                form.val('filter',{
-                    status:'{$Request.param.status}'
+                form.val('filter', {
+                    status: '{$Request.param.status}'
                 })
 
-                $('.clear').click(function(){
+                $('.clear').click(function () {
                     var item = this;
                     console.log($(item).parents('tr').data('id'));
-                    
-                    layer.confirm('确定要清除吗?清除后不能恢复',function(){
-                        $.get('{:url("File/clear")}',{
-                            id:$(item).parents('tr').data('id')
-                        },function(result){
-                            if(result.code == 0){
+
+                    layer.confirm('确定要清除吗?清除后不能恢复', function () {
+                        $.get('{:url("File/clear")}', {
+                            id: $(item).parents('tr').data('id')
+                        }, function (result) {
+                            if (result.code == 0) {
                                 layer.msg('删除成功');
                                 $(item).parents('td').children().remove()
-                            }else{
+                            } else {
                                 layer.msg(result.msg)
                             }
                         })
                     })
                 })
-                $('.force-clear').click(function(){
+                $('.force-clear').click(function () {
                     var item = this;
 
-                    layer.confirm('确定要强制清除吗?该文件有可能正在使用',function(){
-                        $.get('{:url("File/clear")}',{
-                            id:$(item).parents('tr').data('id')
-                        },function(result){
-                            if(result.code == 0){
+                    layer.confirm('确定要强制清除吗?该文件有可能正在使用', function () {
+                        $.get('{:url("File/clear")}', {
+                            id: $(item).parents('tr').data('id')
+                        }, function (result) {
+                            if (result.code == 0) {
                                 layer.msg('删除成功');
                                 $(item).parents('td').children().remove()
-                            }else{
+                            } else {
                                 layer.msg(result.msg)
                             }
                         })
