--- a/view/admin/admin_group/index.html
+++ b/view/admin/admin_group/index.html
@@ -45,7 +45,7 @@
                             </thead>
                             <tbody>
                                 {volist name='list' id='vo'}
-                                    <tr>
+                                    <tr class="item">
                                         <td>{$vo.id}</td>
                                         <td>{$vo.name}</td>
                                         <td>
@@ -77,7 +77,7 @@
                 layer.confirm('确定要删除吗?',function(){
                     $.get($(item).data('href'),function(result){
                         if(result.code == 0){
-                            $(item).parents('tr').remove();
+                            $(item).parents('.item').remove();
                         }
                         layer.msg(result.msg);
                     })
