--- a/public/static/css/common.css
+++ b/public/static/css/common.css
@@ -37,3 +37,46 @@
     font-size: 35px;
     padding: 3px 5px;
 }
+
+
+.main-container {
+    margin-top: 10px;
+}
+
+.layui-table img {
+    max-width: 60px;
+    max-height: 60px;
+}
+
+.table-card-box{
+    margin-top: 15px;
+    background-color: #eee;
+    padding: 15px 5px;
+}
+
+.table-card-item{
+    
+    margin-top: 5px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.table-card-item img{
+    max-width: 60px;
+    max-height: 60px;
+}
+
+.table-card-item .item-title{
+    padding: 5px;
+    font-size: 16px;
+    width: 20%;
+}
+.table-card-item .item-value{
+    padding: 5px;
+    margin: 5px;
+    background-color: #fff;
+    min-width: 80%;
+    white-space: normal;
+    word-break: break-all;
+}
