调整设置logo最大宽度

--- a/view/admin/system/index.html
+++ b/view/admin/system/index.html
@@ -55,7 +55,7 @@
                                                 <div class="layui-btn upload-site-logo">上传logo</div>
                                             </div>
                                             <div>
-                                                <img class="site-logo" src="{:get_source_link(get_system_config('site_logo'))}" alt="">
+                                                <img class="site-logo"  style="max-width: 200px;" src="{:get_source_link(get_system_config('site_logo'))}" alt="">
                                             </div>
                                             <input type="hidden" name="site_logo" value="{:get_system_config('site_logo')}" class="layui-input">
                                         </div>
