--- a/public/static/css/skin-1.css
+++ b/public/static/css/skin-1.css
@@ -63,3 +63,11 @@
 .layui-laydate td.layui-this{
     background-color: #66CCFF !important;
 }
+
+.layui-form-checkbox[lay-skin="primary"]:hover i{
+    border-color: #66CCFF;
+}
+.layui-form-checked[lay-skin="primary"] i{
+    border-color: #66CCFF !important;
+    background-color: #66CCFF !important;
+}
