--- a/view/admin/nav/create.html
+++ b/view/admin/nav/create.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>PC导航管理</title>
+  <title>导航</title>
   {include file="common/_require"}
 
   <script>
@@ -27,7 +27,7 @@
         <div class="main-header">
           <span class="layui-breadcrumb">
             <a>首页</a>
-            <a><cite>系统信息</cite></a>
+            <a><cite>导航</cite></a>
           </span>
         </div>
         <div class="main-container">
