--- a/public/static/css/skin-1.css
+++ b/public/static/css/skin-1.css
@@ -71,3 +71,27 @@
     border-color: #66CCFF !important;
     background-color: #66CCFF !important;
 }
+
+.layui-form-select dl dd.layui-this{
+  background-color: #66CCFF;
+}
+
+
+.layui-form-label{
+  width: unset;
+  padding: 3px 3px;
+  float: unset;
+  text-align: left;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.layui-input-block{
+  margin-left: 0;
+}
+
+.layui-form-pane .layui-form-label{
+  float: left;
+  font-weight: normal;
+  font-size: 14px;
+}
