--- a/view/admin/category/index.html
+++ b/view/admin/category/index.html
@@ -17,7 +17,7 @@
     <div class="layui-layout layui-layout-admin">
         {include file="common/_header"}
     
-        {include file="common/left_app"}
+        {include file="common/left_post"}
     
         <div class="layui-body">
     
@@ -29,7 +29,9 @@
                     </span>
                 </div>
                 <div class="main-container">
-
+                  <div>
+                    <a href="{:url('create')}" class="layui-btn">新增</a>
+                  </div>
                 </div>
             </div>
         </div>
