--- a/view/admin/post/index.html
+++ b/view/admin/post/index.html
@@ -43,6 +43,7 @@
                 <th>名称</th>
                 <th>封面</th>
                 <th>简介</th>
+                <th>排序</th>
                 <th>操作</th>
               </tr>
             </thead>
@@ -53,7 +54,8 @@
                 <td>{$vo.id}</td>
                 <td>{$vo.title}</td>
 
-                <td>{$vo.value}</td>
+                <td><img src="{$vo.poster}" alt=""></td>
+                <td>{$vo.desc}</td>
                 <td>{$vo.sort}</td>
                 <td>
                   <div class="layui-btn-container">
