--- a/view/admin/tag/index.html
+++ b/view/admin/tag/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>分类管理</title>
+  <title>标签管理</title>
   {include file="common/_require"}
 
   <script>
     var currentHeaderNavItem = 'Post';
-    var currentLeftNavItem = 'category';
+    var currentLeftNavItem = 'tag';
   </script>
 </head>
 
@@ -32,7 +32,7 @@
         </div>
         <div class="main-container">
           <div>
-            <a href="{:url('create')}" class="layui-btn">新增</a>
+            <div class="layui-btn create">新增</div>
           </div>
           <div>
             <table class="layui-table">
@@ -49,10 +49,10 @@
                 {volist name="list" id="vo"}
                 <tr class="item" data-id="{$vo.id}">
                   <td>{$vo.id}</td>
-                  <td> {:str_repeat('|--',$vo.level)} {$vo.title}</td>
+                  <td> {:str_repeat('|--',$vo.level)} <span class="tag-name">{$vo.title}</span></td>
                   <td>
                     <div class="layui-btn-container">
-                      <a class="layui-btn layui-btn-sm" href="{:url('edit',['id'=>$vo.id])}">编辑</a>
+                      <div class="layui-btn layui-btn-sm edit" data-href="{:url('update',['id'=>$vo.id])}">编辑</div>
                       <div class="layui-btn layui-btn-sm delete">删除</div>
                     </div>
                   </td>
@@ -62,7 +62,9 @@
 
               </tbody>
             </table>
-
+            <div>
+              {$list|raw}
+            </div>
           </div>
         </div>
       </div>
@@ -77,7 +79,7 @@
 
     $('.delete').click(function () {
       var item = this;
-      layer.confirm('确定要删除吗？子分类将向上挪动一级', function () {
+      layer.confirm('确定要删除吗？', function () {
         $.get('{:url("delete")}', {
           id: $(item).parents('.item').data('id')
         }, function (result) {
@@ -86,6 +88,40 @@
           $(item).parents('.item').remove();
         })
       })
+    })
+
+    $('.create').click(function () {
+      layer.prompt({
+        title: '请输入标签,空格分隔可添加多个'
+      }, function (value, index) {
+        $.post('{:url("save")}', {
+          tags: value
+        }, function (result) {
+          layer.msg('添加成功')
+          setTimeout(() => {
+            location.reload()
+          }, 1200);
+        })
+      })
+    })
+
+    $('.edit').click(function(){
+      var self = this;
+
+      layer.prompt({
+        title:'请输入标签,空格无效',
+        value:$(self).parents('.item').find('.tag-name').text()
+      },function(value,index){
+        $.post($(self).data('href'),{
+          title:value
+        },function(result){
+          layer.msg('修改成功');
+
+          $(self).parents('.item').find('.tag-name').text(value)
+          layer.close(index)
+        })
+      })
+
     })
 
 
